--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.properties
-.yml
+
+*.properties
+*.yml
 
 
 ### STS ###
